<resources>
    <string name="abc_action_bar_home_description">Navigasi ke beranda</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigasi ke atas</string>
    <string name="abc_action_menu_overflow_description">Lebih banyak opsi</string>
    <string name="abc_action_mode_done">Selesai</string>
    <string name="abc_activity_chooser_view_see_all">Lihat semua</string>
    <string name="abc_activitychooserview_choose_application">Pilih aplikasi</string>
    <string name="abc_capital_off">Mati</string>
    <string name="abc_capital_on">Nyala</string>
    <string name="abc_search_hint">Cari...</string>
    <string name="abc_searchview_description_clear">Kosongkan kueri</string>
    <string name="abc_searchview_description_query">Cari kueri</string>
    <string name="abc_searchview_description_search">Cari</string>
    <string name="abc_searchview_description_submit">Ajukan kueri</string>
    <string name="abc_searchview_description_voice">Pencarian suara</string>
    <string name="abc_shareactionprovider_share_with">Bagikan dengan</string>
    <string name="abc_shareactionprovider_share_with_application">Bagikan dengan %s</string>
    <string name="abc_toolbar_collapse_description">Runtukan</string>
    <string name="accept">Terima</string>
    <string name="common_google_play_services_enable_button">Aktifkan</string>
    <string name="common_google_play_services_enable_text">%1$s tidak akan berfungsi kecuali Anda mengaktifkan layanan Google Play.</string>
    <string name="common_google_play_services_enable_title">Aktifkan layanan Google Play</string>
    <string name="common_google_play_services_install_button">Pasang</string>
    <string name="common_google_play_services_install_text">%1$s tidak akan berjalan tanpa layanan Google Play, yang tidak ada di perangkat Anda.</string>
    <string name="common_google_play_services_install_title">Unduh layanan Google Play</string>
    <string name="common_google_play_services_notification_ticker">Kesalahan layanan Google Play</string>
    <string name="common_google_play_services_unknown_issue">%1$s mengalami masalah dengan layanan Google Play. Silakan coba lagi.</string>
    <string name="common_google_play_services_unsupported_text">%1$s tidak akan berjalan tanpa layanan Google Play, yang tidak didukung oleh perangkat Anda.</string>
    <string name="common_google_play_services_update_button">Perbarui</string>
    <string name="common_google_play_services_update_text">%1$s tidak akan berjalan kecuali Anda memperbarui layanan Google Play.</string>
    <string name="common_google_play_services_update_title">Perbarui layanan Google Play</string>
    <string name="common_google_play_services_updating_text">%1$s tidak akan berjalan tanpa layanan Google Play, yang saat ini sedang diperbarui</string>
    <string name="common_google_play_services_wear_update_text">Versi baru layanan Google Play diperlukan. Ini akan memperbarui dirinya sendiri dalam waktu dekat.</string>
    <string name="common_open_on_phone">Buka lebih banyak HP</string>
    <string name="common_signin_button_text">Masuk</string>
    <string name="common_signin_button_text_long">Masuk dengan Google</string>
    <string name="create_calendar_message">Izinkan iklan untuk membuat acara kalender?</string>
    <string name="create_calendar_title">Buat acara kalender</string>
    <string name="debug_menu_ad_information">Informasi iklan</string>
    <string name="debug_menu_creative_preview">Prabaca Kreatif</string>
    <string name="debug_menu_title">Pilih mode debug</string>
    <string name="debug_menu_troubleshooting">Pemecahan Masalah</string>
    <string name="decline">Menolak</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Izinkan iklan untuk menyimpan gambar di galeri Foto?</string>
    <string name="store_picture_title">Simpan gambar</string>
    <string name="Basic_help">Untuk Memotong atau Melanjutkan: Tekan pengguna. Untuk memberi nama pengguna: Ketuk kotak Edit di samping nama. Blokir siapa pun dengan menyentuh ikon blacklist, Anda dapat mengelola blacklist di halaman jail. Gunakan timer offline untuk membatasi waktu tidur anak. Dan untuk Membatasi Kecepatan: coba tekan ikon wifi. Akun Pro: Beli atau Lihat di halaman Pro. Transfer keanggotaan dengan masuk ke arcai.com.</string>
    <string name="Buy">Beli atau Perpanjang Gratis</string>
    <string name="ForgetPassword">Lupa</string>
    <string name="Gateway_view_title">Gateway:</string>
    <string name="Help">Bantuan</string>
    <string name="Login">Masuk</string>
    <string name="LoginHint">Masuk ke Arcai.com</string>
    <string name="Logintitle">Masuk ke arcai.com untuk Transfer/Mulihkan anggota Pro antara perangkat.</string>
    <string name="Logout">Keluar</string>
    <string name="Node_view_title">Daftar pengguna jaringan</string>
    <string name="Refresh">Segarkan</string>
    <string name="Register">Daftar</string>
    <string name="action_button_cancel">Batal</string>
    <string name="action_button_no">Tidak</string>
    <string name="action_button_ok">Oke</string>
    <string name="action_search">Cari</string>
    <string name="action_settings">Pengaturan</string>
    <string name="blacklist_name_input_hint">Masukkan nama</string>
    <string name="button_delgate">Hapus gerbang</string>
    <string name="button_scan">Pindai</string>
    <string name="dialog_please_connect_wifi">Silakan sambungkan WIFI</string>
    <string name="dialog_speedlimit_all_online">Semua Online</string>
    <string name="dialog_speedlimit_all_totalcutoff">Potong semua</string>
    <string name="dialog_speedlimit_all_usermessage">Potong kecepatan semua pengguna</string>
    <string name="dialog_speedlimit_nolimit">Penuh</string>
    <string name="dialog_speedlimit_totalcutoff">Mati</string>
    <string name="download_components">Netcut akan mengunduh komponen yang kurang untuk dapat berjalan, ini mungkin memerlukan beberapa detik.</string>
    <string name="download_components_no_wifi">Memerlukan WIFI untuk mengunduh komponen yang kurang untuk perangkat Anda.</string>
    <string name="expiredstat">Kadaluarsa</string>
    <string name="expiretime">Waktu kadaluarsa</string>
    <string name="hello_world">Halo dunia</string>
    <string name="net_lock_message">Penguncian akan menghentikan akses pengguna baru ke WIFI Anda, Pembukaan kunci akan mengembalikan normal.</string>
    <string name="net_lock_off">Buka</string>
    <string name="net_lock_on">Kunci</string>
    <string name="net_lock_tile">Kunci/Buka kunci WiFi</string>
    <string name="netcard_chose">Pilih netcard</string>
    <string name="netcard_none">Pilih netcard</string>
    <string name="netcard_noneworking">Pilih netcard</string>
    <string name="netcard_offline">Tidak ada WIFI</string>
    <string name="netcut_error_no_binary">Kesalahan Layanan Biner, silakan copot pemasangan, reboot, lalu pasang kembali.</string>
    <string name="netcut_error_wifi_down">Jaringan Nirkabel Tidak Berfungsi, Netcut akan terus memantau jaringan dan melakukan pemindaian ulang setelah jaringan kembali.</string>
    <string name="netcut_pro_account_title">Selamat datang di keanggotaan NetCut Pro, beli keanggotaan hanya dengan $1 per bulan. Tanpa iklan, fungsi keren tanpa batas.</string>
    <string name="netcut_pro_expired_buyoption">Beli untuk memperpanjang keanggotaan Anda. Ingat untuk mengklik Segarkan akun setelah memperpanjang.</string>
    <string name="netcut_pro_expired_reminder">Peringatan: Akun Pro Anda telah kedaluwarsa! Fungsi Pro dinonaktifkan</string>
    <string name="netcut_quit_full">Keluar penuh</string>
    <string name="netcut_quit_hint">Keluar dari aplikasi juga akan menghentikan layanan. Jika Anda ingin memutuskan sambungan yang berjalan di latar belakang, jangan keluar, beralihlah ke aplikasi lain. Catatan: Beberapa ponsel menghentikan layanan latar belakang saat layar mati. Jika Anda melihat NetCut tidak berfungsi, Anda perlu menjaga NetCut tetap berjalan di atas</string>
    <string name="netcut_quit_off_ui">Matikan UI, Jaga Layanan Tetap Berjalan</string>
    <string name="netcut_quit_title">Keluar dari Netcut</string>
    <string name="netcut_status_connect">Sedang Menghubungkan ke Layanan</string>
    <string name="netcut_status_starting">Memulai layanan</string>
    <string name="netcut_user_buy_1_month">Beli satu bulan</string>
    <string name="netcut_user_buy_1_year">Beli satu tahun (diskon 15%)</string>
    <string name="netcut_user_list">Pengguna jaringan</string>
    <string name="netcut_user_rename">Atur nama untuk</string>
    <string name="netcut_user_rename_hint">Anda dapat mengatur nama pengguna menjadi nama yang mudah diingat. Nama pengguna ini akan muncul saat mereka mengakses WiFi Anda</string>
    <string name="netcut_users_speed">Kecepatan semua pengguna</string>
    <string name="networkuser_name_input_hint">Masukkan nama</string>
    <string name="networkuser_search_input_hint">Masukkan nama atau IP, atau merek yang ingin Anda lacak di jaringan</string>
    <string name="no_root_hint">Perangkat tidak di-root, atau NetCut belum diizinkan akses root. Kunjungi arcai.com untuk melihat cara melakukan root</string>
    <string name="option_help">Bantuan</string>
    <string name="option_netcard_status">Netcard</string>
    <string name="option_pro_title">Langganan Netcut PRO</string>
    <string name="option_root_status">Aktifkan Root</string>
    <string name="option_speedtest">Tes kecepatan</string>
    <string name="password">Kata sandi:</string>
    <string name="pro_login_failed">Nama pengguna dan kata sandi tidak benar!</string>
    <string name="pro_member_copy_mac_function_hint">Salin MAC adalah fungsi anggota Pro</string>
    <string name="pro_member_function_hint">Ini adalah fungsi anggota Pro</string>
    <string name="pro_payment_failed">Proses pembayaran gagal, silakan hubungi support@arcai.com dengan ID Pesanan dan ID Pengguna Anda</string>
    <string name="setting_cutoffmethod">Metode pemutusan</string>
    <string name="setting_cutoffmethod1">Pemutusan mempengaruhi Gateway dan Pengguna</string>
    <string name="setting_cutoffmethod2">Pemutusan mempengaruhi Gateway</string>
    <string name="setting_cutoffmethod3">Pemutusan mempengaruhi Pengguna</string>
    <string name="setting_fakemac">Gunakan MAC acak selama pemutusan</string>
    <string name="setting_fakemac_disable">Matikan MAC palsu</string>
    <string name="setting_fakemac_enable">Aktifkan MAC palsu</string>
    <string name="setting_fastscan">Pemindaian cepat</string>
    <string name="setting_fastscan_title">Mode pemindaian cepat dengan kecepatan pemindaian tertinggi</string>
    <string name="setting_slowscan">Pemindaian lambat</string>
    <string name="setting_slowscan_disable">Matikan pemindaian lambat</string>
    <string name="setting_slowscan_enable">Aktifkan pemindaian lambat</string>
    <string name="setting_slowscan_title">Kecepatan kueri lambat, hindari badai paket</string>
    <string name="setting_txt_fakemac">Alamat MAC palsu</string>
    <string name="showpass">Tampilkan</string>
    <string name="tab_button_cut">Putuskan</string>
    <string name="tab_button_jail">Kurung</string>
    <string name="tab_button_options">Pengaturan</string>
    <string name="tab_button_pro">Pro</string>
    <string name="tab_button_report">Laporan</string>
    <string name="title_Usage">Penggunaan</string>
    <string name="title_activity_device_manager">Pengaturan Perangkat WiFi NetCut</string>
    <string name="title_activity_gopro_manager">Pengaturan Profesional Netcut</string>
    <string name="title_activity_message_dlg">Pesan</string>
    <string name="title_netcut_pro_id">Id:</string>
    <string name="username">Nama pengguna:</string>
</resources>