<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingTop="8.0dip"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textSize="10.0sp"
        android:textStyle="bold"
        android:textColor="#ffaaaaaa"
        android:gravity="center|left"
        android:background="#ff202020"
        android:paddingLeft="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="20.0dip"
        android:text="@string/setting_cutoffmethod" />
    <LinearLayout
        android:orientation="horizontal"
        android:background="#ff181818"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip">
        <TextView
            android:gravity="center|left"
            android:layout_gravity="left"
            android:paddingLeft="20.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/setting_cutoffmethod1"
            android:layout_weight="1.0" />
        <ImageButton
            android:layout_gravity="right"
            android:id="@id/img_cutoffmethod_onoff_1"
            android:background="#00000000"
            android:padding="7.0dip"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/switch_off"
            android:scaleType="fitCenter" />
    </LinearLayout>
    <View
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_height="2.0dip" />
    <LinearLayout
        android:orientation="horizontal"
        android:background="#ff181818"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip">
        <TextView
            android:gravity="center|left"
            android:layout_gravity="left"
            android:paddingLeft="20.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/setting_cutoffmethod2"
            android:layout_weight="1.0" />
        <ImageButton
            android:layout_gravity="right"
            android:id="@id/img_cutoffmethod_onoff_2"
            android:background="#00000000"
            android:padding="7.0dip"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/switch_off"
            android:scaleType="fitCenter" />
    </LinearLayout>
    <View
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_height="2.0dip" />
    <LinearLayout
        android:orientation="horizontal"
        android:background="#ff181818"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip">
        <TextView
            android:gravity="center|left"
            android:layout_gravity="left"
            android:paddingLeft="20.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/setting_cutoffmethod3"
            android:layout_weight="1.0" />
        <ImageButton
            android:layout_gravity="right"
            android:id="@id/img_cutoffmethod_onoff_3"
            android:background="#00000000"
            android:padding="7.0dip"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/switch_off"
            android:scaleType="fitCenter" />
    </LinearLayout>
</LinearLayout>