<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/netcut_pro_account_status"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:textSize="@dimen/tile_text_Size"
            android:padding="@dimen/margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/netcut_pro_account_title" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@id/netcut_pro_id_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/title_netcut_pro_id"
                android:layout_weight="1.0" />
            <TextView
                android:id="@id/netcut_pro_id"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_weight="1.0" />
            <TextView
                android:textColor="@color/holoblue_light"
                android:id="@id/netcut_pro_username"
                android:background="?editTextBackground"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:hint="@string/LoginHint"
                android:layout_weight="2.0"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/expiretime"
                android:layout_weight="1.0" />
            <TextView
                android:id="@id/netcut_pro_account_expire"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/expiredstat"
                android:layout_weight="1.0" />
            <TextView
                android:id="@id/netcut_pro_account_expire_status"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <Button
                android:id="@id/button_extend"
                android:layout_width="@dimen/HEADER_BUTTON_SIZE"
                android:layout_height="wrap_content"
                android:text="@string/netcut_user_buy_1_month"
                android:textAllCaps="false" />
            <Button
                android:id="@id/button_extend_year"
                android:layout_width="@dimen/HEADER_BUTTON_SIZE"
                android:layout_height="wrap_content"
                android:text="@string/netcut_user_buy_1_year"
                android:textAllCaps="false" />
            <Button
                android:id="@id/button_memship_online"
                android:layout_width="@dimen/HEADER_BUTTON_SIZE"
                android:layout_height="wrap_content"
                android:text="Menangkan keanggotaan gratis"
                android:textAllCaps="false" />
            <Button
                android:id="@id/button_relogin"
                android:layout_width="@dimen/HEADER_BUTTON_SIZE"
                android:layout_height="wrap_content"
                android:text="@string/Refresh"
                android:textAllCaps="false" />
            <Button
                android:id="@id/button_support"
                android:layout_width="@dimen/HEADER_BUTTON_SIZE"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/bgd1"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="100.0dip"
            android:layout_height="100.0dip"
            android:layout_marginTop="10.0dip"
            android:src="@mipmap/netcut" />
        <TextView
            android:textSize="26.0sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="@color/item_color"
            android:gravity="center"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:text="NETCUT" />
        <LinearLayout
            android:orientation="horizontal"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:gravity="center|left"
                android:padding="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Versi:"
                android:layout_weight="1.0" />
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:gravity="center|left"
                android:padding="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.7.7-id" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10.0dip"
                android:text="Deskripsi" />
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textColor="#ffb1b1b1"
                android:gravity="fill"
                android:padding="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NetCut memungkinkan Anda untuk secara otomatis memindai jaringan WiFi lokal dan mAkhiriapatkan informasi tentang perangkat yang terhubung ke jaringan tersebut. NetCut memungkinkan Anda melihat informasi tentang alamat IP, nama host, dan alamat fisik komputer, serta beralih antara kartu jaringan. Program ini juga memungkinkan Anda untuk mengubah alamat MAC perangkat, serta menerima data tentang router, switch, atau perangkat portabel yang terhubung ke jaringan."
                android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8.0dip"
                android:text="Berbeda dari yang asli:" />
            <TextView
                android:textSize="16.0sp"
                android:typeface="sans"
                android:textColor="#ffb1b1b1"
                android:gravity="fill"
                android:padding="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="• Dimodifikasi oleh Dobradon™ 4PDA\n• Di desain ulang\n• APK dibersihkan dari beberapa file yang tidak perlu\n• Basis aplikasi oleh @WeAreRavenS\n• Bahasa Indonesia oleh @KeishaXD \n"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip">
        <TextView
            android:textSize="10.0sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="Dimodifikasi Oleh:" />
        <TextView
            android:textSize="10.0sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="@color/item_color2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="Dobradon, WeAreRavenS, KeishaXD" />
    </LinearLayout>
</LinearLayout>